# fob

./: .gitignore  DEPLOY.md  FOCUS_BLOCKS.md  README.md  SCHEMA.md  dev_install.sh  install.sh  pyproject.toml
.github/workflows/: tests.yaml
src/fob/: __init__.py
src/fob/commands/: __init__.py  did.py  didnt.py  gm.py  gn.py  help.py  info.py  init.py  new_month.py  nvm.py  reset.py  sup.py  uninstall.py
src/fob/commands/components/: __init__.py  month_overview.py  overview.py
src/fob/commands/overviews/: __init__.py  day_checklist.py  month_overview.py
src/fob/commands/user_flows/: __init__.py  day_checklist.py
src/fob/db/: __init__.py  exc.py  lib.py  operations.py  wrapper.py
src/fob/utils/: __init__.py  utils.py
tests/: test_fob_info.py
