[project]
name = "fob"
# Remember to update the version number in 'utils/utils.py' manually also.
version = "0.2.5"
description = "Focus Blocks: Simple and elegant daily time management tool."
readme = "README.md"
authors = [{ name = "tensorturtle", email = "tensorturtle@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "pyinstaller>=6.11.1",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "tinydb>=4.8.2",
]

[project.scripts]
fob = "fob:main"
